--- a/src/Home/static/footer.less
+++ b/src/Home/static/footer.less
@@ -68,10 +68,13 @@ footer {
         color: #fff;
       }
     }
-    .translate-button {
+    .media-button {
       text-align: left;
       width: 200px;
       margin: 0 auto;
+      a {
+        margin-right: 10px;
+      }
     }
   }
   .footer-logo {
