--- a/src/Home/static/home.less
+++ b/src/Home/static/home.less
@@ -77,11 +77,10 @@ svg g {
 /** page2 **/
 .page2 {
   text-align: center;
-  height: 588px;
+  height: 470px;
 
   .page2-content {
     will-change: transform;
-
     .page-content {
       font-size: 18px;
     }
@@ -156,7 +155,9 @@ svg g {
     }
 
     img {
-      height: 200px;
+      width: 100%;
+      min-width: 100px;
+      max-width: 200px;
     }
   }
 
