--- a/src/Home/static/responsive.less
+++ b/src/Home/static/responsive.less
@@ -338,3 +338,10 @@
     margin-top: 150px;
   }
 }
+
+@media only screen and (min-width: @screen-lg) {
+  .page2 {
+    background: url(https://gw.alipayobjects.com/zos/rmsportal/ZsWYzLOItgeaWDSsXdZd.svg) no-repeat bottom;
+    background-size: 100%,
+  }
+}
