--- a/src/Home/static/footer.less
+++ b/src/Home/static/footer.less
@@ -68,8 +68,8 @@ footer {
         color: #fff;
       }
     }
-    .media-button {
-      text-align: left;
+    .media-buttons {
+      // text-align: left;
       width: 200px;
       margin: 0 auto;
       a {
